# rudn-networking-exam-tasks

./: .gitmodules  Cargo.toml  README.md
dns/: .gitignore  Makefile  README.md  clean_root_zone.py  ns_response.py  session.py
dns/dns_live/: Cargo.toml  README.md
dns/dns_live/sessions/: example.json  example1.json  example2.json
dns/dns_live/src/: main.rs  querying.rs  session.rs  web.rs
dns/dns_live/src/web/: templates.rs  ui.rs
routing/: building1.md  city1.md  map.py
routing/maps/: building1.drawio  city1.drawio
