[package]
name = "dns_live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
chrono = { version = "0.4.23", features = ["serde"] }
minijinja = "0.30.6"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trust-dns-client = "0.22.0"
trust-dns-proto = { version = "0.22.0", features = ["serde-config"] }
